--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "echo 'No build required'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "cypress:run": "npx cypress run",
     "cypress:e2e": "start-test start http-get://localhost:4200 cypress:run",
