--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build project
-        run: npm run build
-
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
         with:
-          start: npx cypress run --spec "cypress/e2e/firstTest.spec.js"
+          start: npx cypress run --spec "cypress/e2e/firstTest.spec.js" --browser chrome --headless --disable-gpu
